# mfod-updater

mfod-updater/: .cproject  .project  CMakeLists.txt  Makefile  amod-include-path-config.xml  make_mainapp.sh
mfod-updater/Default/: makefile  sources.mk
mfod-updater/inc/: amod.h  types.h  verinfo.h
mfod-updater/inc/coordtr/: coordtr.h
mfod-updater/inc/core/: device.h  evque.h  geodesic.h  guimgr.h  kvmf.h  logger.h  magcomp.h  msgproc.h  sysctrl.h  taqdata_manager.h  taqmgr.h
mfod-updater/inc/ds/: list.h  queue.h  stack.h
mfod-updater/inc/etc/: .project  devconf.h  ispmgr.h  util.h
mfod-updater/inc/geomag/: geomag.h
mfod-updater/inc/gui/: gui_button.h  gui_caption.h  gui_dialog.h  gui_dialog_creator.h  gui_draw.h  gui_grid.h  gui_keyin_handler.h  gui_menu.h  gui_proc.h  gui_qsel.h  gui_slider.h  gui_spinbox.h  gui_str.h  gui_submenu.h  gui_svplot.h  gui_window.h  guiid.h
mfod-updater/inc/modules/: camif.h  display.h  dmc.h  eis.h  gnss.h  gpio.h  ipu.h  ircam.h  irshtr.h  lrf.h  mcu.h  sdcard.h  uart.h  vgss.h
mfod-updater/inc/morpho/: morpho_api.h  morpho_error.h  morpho_get_image_size.h  morpho_image_data.h  morpho_image_data_ex.h  morpho_motion_data_perspective.h  morpho_quadr_int.h  morpho_rect_int.h  morpho_video_refiner.h  morpho_video_refiner_internal.h
mfod-updater/inc/msg/: K00_1.h  K02_22.h  K02_37.h  K02_9.h  K05_1.h  dlp_header.h  kvmf_header.h
mfod-updater/src/core/: Makefile  device.c  evque.c  geodesic.c  guimgr.c  logger.c  magcomp.c  main.c  msgproc.c  subdir.mk  sysctrl.c  taqdata_manager.c  taqmgr.c
mfod-updater/src/ds/: Makefile  list.c  queue.c  stack.c  subdir.mk
mfod-updater/src/etc/: Makefile  devconf.c  ispmgr.c  subdir.mk  util.c
mfod-updater/src/gui/: Makefile  gui_button.c  gui_caption.c  gui_dialog.c  gui_dialog_creator.c  gui_draw.c  gui_grid.c  gui_keyin_handler.c  gui_menu.c  gui_qsel.c  gui_slider.c  gui_spinbox.c  gui_submenu.c  gui_svplot.c  gui_window.c  subdir.mk
mfod-updater/src/modules/: Makefile  camif.c  display.c  dmc.c  eis.c  gnss.c  gpio.c  ipu.c  ipu.c.i  ircam.c  irshtr.c  lrf.c  mcu.c  sdcard.c  subdir.mk  uart.c  vgss.c
mfod-updater/tools/: buildnum_updater
